--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -655,7 +655,7 @@ main {
 
 .service-icon-box img { margin: auto; }
 
-.service-content-box { text-align: center; }
+.service-content-box { text-align: center; align-content: center; }
 
 .service-item-title { margin-bottom: 7px; }
 
