--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -643,9 +643,8 @@ main {
 }
 
 .projects-item-title {
-  display: flex;
-  justify-content: center;
   text-align: center;
+  margin: 0 auto;
 }
 
 .projects-text {
